--- a/services.html
+++ b/services.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h3>Services html creation</h3>
-    <h4>This is a trial</h4>
+    <h4>Deleted trial</h4>
+    <h6>Deleted trial</h6>
 </body>
 </html>
