--- a/services.html
+++ b/services.html
@@ -7,6 +7,6 @@
 <body>
     <h3>Services html creation</h3>
     <h4>This is a trial</h4>
-    <h5>This is another trial</h5>
+    <h5>This is another</h5>
 </body>
 </html>
