--- a/home.html
+++ b/home.html
@@ -7,5 +7,7 @@
 <body>
     <p>Learning Git</p>
     <p>Second update</p>
+    <h3>Adding a footer</h3>
+    <h4>Ooh forgot this</h4>
 </body>
 </html>
